--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome test</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h4 style="text-align: center;">You can run your code with the browser or using node (if you are familiar with it).<br>I would recommend the browser if you are unfamiliar with node</h4>
     <br>
     <br>
@@ -29,9 +29,9 @@
     <div id="quiz5"></div>
 
     <h1>quistion 6.</h1>
-    <label for="marks"><strong> Input the total score of julia.</strong> <br> 
-        <input type="number" id="score" placeholder="eneter the score"><br> <br>
-    <button onclick="getGrade()">click me to get the grade of julia</button> <br>
+    <label for="marks"><strong> Input the total score of julia.</strong>  
+        <input  id="marks" placeholder="eneter the score"> 
+    <button .onclick="getGrade()"> click me to get the grade of julia </button> 
     <div id="quiz6"></div> 
 
     <h1>quistion 7.</h1>
